--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1005,7 +1005,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-home {
-    background-image: url("/assets/image/bkg.png");
+    background-image: "/assets/image/bkg.jpg";
 	padding: 0px 50px;
 	position: relative;
     background-color: #000000;
