--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: "Rajdhani";
+	font-family: "LiveOverfont";
 }
 
 ::selection {
@@ -32,7 +32,7 @@ p,h1,h2,h3,h4,h5,h6 {
 
 button,input {
 	border: 0;
-	font-family: "Rajdhani";
+	font-family: "LiveOverfont";
 }
 
 button:focus,input:focus {
@@ -40,7 +40,7 @@ button:focus,input:focus {
 }
 
 body {
-	font-family: "Rajdhani";
+	font-family: "LiveOverfont";
 	background-color: #fff;
 	overflow-x: hidden;
 }
@@ -183,7 +183,6 @@ header .grid-layout nav .nav-list li a:hover {
 	body {
 		overflow-x: hidden;
 	}
-
 	.nav-list {
 		text-align: center;
 		position: absolute;
@@ -204,7 +203,7 @@ header .grid-layout nav .nav-list li a:hover {
 	}
 
 	header .grid-layout nav .nav-list li a {
-		font-size: 2.4rem;
+		font-size: 3.4rem;
 	}
 
 	.mobile-menu {
@@ -213,12 +212,16 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-home {
-    /* background-image: url("/assets/image/bg1.jpeg"); */
+    background-image: url("/assets/image/wallhaven-729gv3.png");
 	padding: 0px 50px;
 	position: relative;
     background-color: #000000;
-    /* background-repeat: no-repeat;
-    background-position: center; */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 0px 50px;
+    position: relative;
+    min-height: 100vh;
 }
 
 @media screen and (max-width: 992px) {
@@ -281,12 +284,12 @@ header .grid-layout nav .nav-list li a:hover {
 	font-size: 2rem;
 	max-width: 600px;
 	margin: 40px 0px;
-	font-weight: 400;
+	font-weight: 900;
 	line-height: 140%;
 }
 
 #s-home .grid-layout #home #home-container-text a {
-	background: #caeaf5;
+	background: #3f94b0;
 	color: rgb(0, 0, 0);
 	backdrop-filter: blur(10px);
 	padding: 10px 10px;
@@ -296,7 +299,7 @@ header .grid-layout nav .nav-list li a:hover {
 	align-items: center;
 	transition: all .4s ease;
 	margin-top: 30px;
-	font-size: 18px;
+	font-size: 30px;
 	font-weight: 500;
 }
 
@@ -307,7 +310,7 @@ header .grid-layout nav .nav-list li a:hover {
 
 #s-home .grid-layout #home #logo {
 	position: absolute;
-	right: -50px;
+	right: -30px;
 	top: 50%;
 	transform: translate(0%, -50%);
 }
@@ -448,7 +451,7 @@ header .grid-layout nav .nav-list li a:hover {
 	line-height: 3.2rem;
 	color: #d8d8d8;
 	font-size: 2rem;
-	font-line-height: 160%;
+	
 }
 
 #s-experience {
@@ -500,7 +503,7 @@ header .grid-layout nav .nav-list li a:hover {
 
 #s-experience .grid-layout #experience .option-experience .activeExperience {
 	border-left: 4px solid #f5e6e6;
-	color: rgb(212, 64, 64);
+	color: rgb(200, 40, 40);
 }
 
 #s-experience .grid-layout #experience .option-experience>div {
@@ -549,7 +552,7 @@ header .grid-layout nav .nav-list li a:hover {
 
 #s-experience .grid-layout #experience .text-experience>div p {
 	font-size: 1.8rem;
-	color: #d8d8d8;
+	color: #ca0303;
 }
 
 #s-experience .grid-layout #experience .text-experience h5 {
@@ -794,7 +797,7 @@ header .grid-layout nav .nav-list li a:hover {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: "Rajdhani";
+	font-family: "LiveOverfont";
 }
 
 ::selection {
@@ -824,7 +827,7 @@ p,h1,h2,h3,h4,h5,h6 {
 
 button,input {
 	border: 0;
-	font-family: "Rajdhani";
+	font-family: "LiveOverfont";
 }
 
 button:focus,input:focus {
@@ -832,7 +835,7 @@ button:focus,input:focus {
 }
 
 body {
-	font-family: "Rajdhani";
+	font-family: "LiveOverfont";
 	background-color: #fff;
 	overflow-x: hidden;
 }
@@ -1002,15 +1005,6 @@ header .grid-layout nav .nav-list li a:hover {
 	.mobile-menu {
 		display: block;
 	}
-}
-
-#s-home {
-    background-image: url("/assets/image/bkg.jpg");
-	padding: 0px 50px;
-	position: relative;
-    background-color: #000000;
-    /* background-repeat: no-repeat;
-    background-position: center; */
 }
 
 @media screen and (max-width: 992px) {
@@ -1227,7 +1221,7 @@ header .grid-layout nav .nav-list li a:hover {
 
 #s-about .grid-layout #about-text h2 {
 	padding-bottom: 24px;
-	color: #fff;
+	color: #d9d9d9;
 	font-size: 4rem;
 	font-weight: 500;
 }
@@ -1244,7 +1238,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-experience {
-	background-color: #040405;
+	background-color: #111111;
 	color: #fff;
 	padding: 96px 48px;
 }
@@ -1291,7 +1285,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-experience .grid-layout #experience .option-experience .activeExperience {
-	border-left: 4px solid #f5e6e6;
+	border-left: 4px solid #c30000;
 	color: rgb(212, 64, 64);
 }
 
@@ -1307,7 +1301,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-experience .grid-layout #experience .option-experience>div h3 {
-	font-size: 1.8rem;
+	font-size: 2.8rem;
 	font-weight: 400;
 }
 
@@ -1335,24 +1329,24 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-experience .grid-layout #experience .text-experience>div h4 {
-	font-size: 2.4rem;
+	font-size: 4.4rem;
 	font-weight: 400;
 }
 
 #s-experience .grid-layout #experience .text-experience>div p {
-	font-size: 1.8rem;
-	color: #d8d8d8;
+	font-size: 2.1rem;
+	color: rgb(212, 64, 64);
 }
 
 #s-experience .grid-layout #experience .text-experience h5 {
-	font-size: 1.8rem;
+	font-size: 2.8rem;
 	margin: 32px 0px;
 	font-weight: 400;
 	color: rgb(212, 64, 64);
 }
 
 #s-experience .grid-layout #experience .text-experience p {
-	font-size: 1.8rem;
+	font-size: 2.8rem;
 	line-height: 160%;
 	color: #d8d8d8;
 }
@@ -1372,7 +1366,7 @@ header .grid-layout nav .nav-list li a:hover {
 #s-projects .grid-layout h2 {
 	padding-bottom: 24px;
 	color: #fff;
-	font-size: 4rem;
+	font-size: 3rem;
 	font-weight: 500;
 }
 
@@ -1443,7 +1437,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-projects .grid-layout #projects>article h3 {
-	color: #caeaf5;
+	color: #ffffff;
 	font-size: 2.4rem;
 	font-weight: 500;
 }
@@ -1453,7 +1447,7 @@ header .grid-layout nav .nav-list li a:hover {
 	margin: 24px 0px;
 	color: #d8d8d8;
 	line-height: 3.2rem;
-	font-size: 1.8rem;
+	font-size: 2.8rem;
 }
 
 #s-projects .grid-layout #teslabank {
@@ -1483,8 +1477,8 @@ header .grid-layout nav .nav-list li a:hover {
 #s-projects .grid-layout a {
 	color: #50aab1;
 	position: relative;
-	font-size: 2rem;
-	font-weight: 400;
+	font-size: 3rem;
+	font-weight: 00;
 }
 
 #s-projects .grid-layout a::after {
@@ -1597,7 +1591,7 @@ header .grid-layout nav .nav-list li a:hover {
 #s-services .grid-layout #services article p {
 	line-height: 3.2rem;
 	color: #d8d8d8;
-	font-size: 1.8rem;
+	font-size: 2.8rem;
 }
 
 #s-skills {
@@ -1654,7 +1648,7 @@ header .grid-layout nav .nav-list li a:hover {
 	max-width: 500px;
 	line-height: 3.2rem;
 	color: #d8d8d8;
-	font-size: 1.8rem;
+	font-size: 2.8rem;
 }
 
 #s-skills .grid-layout #skills #skills-cards {
@@ -1713,7 +1707,7 @@ header .grid-layout nav .nav-list li a:hover {
 	justify-content: center;
 	align-items: center;
 	display: none;
-	font-size: 1.8rem;
+	font-size: 2.8rem;
 }
 
 #s-skills .grid-layout #skills #skills-cards article .skills-cards-name-high {
@@ -1803,7 +1797,7 @@ footer .grid-layout div img {
 .grid-layout {
 	max-width: 1140px;
 	margin: 0 auto;
-}/*# sourceMappingURL=style.css.map */
+}
 
 #s-services .grid-layout #services article div img {
 	width: 70px;
@@ -1811,20 +1805,20 @@ footer .grid-layout div img {
 
 #s-services .grid-layout #services article h3 {
 	padding: 24px 0px;
-	color: #fff;
+	color: #ffffff;
 	font-size: 2.4rem;
 	font-weight: 500;
 }
 
 #s-services .grid-layout #services article p {
 	line-height: 3.2rem;
-	color: #d8d8d8;
-	font-size: 1.8rem;
+	color: #e8e8e8;
+	font-size: 2.8rem;
 }
 
 #s-skills {
 	padding: 96px 48px;
-	background-color: #000001;
+	background-color: #000000;
 	padding-bottom: 32px;
 }
 
@@ -1876,7 +1870,7 @@ footer .grid-layout div img {
 	max-width: 500px;
 	line-height: 3.2rem;
 	color: #d8d8d8;
-	font-size: 1.8rem;
+	font-size: 2.8rem;
 }
 
 #s-skills .grid-layout #skills #skills-cards {
@@ -1899,15 +1893,15 @@ footer .grid-layout div img {
 	justify-content: center;
 	width: 20%;
 	flex-grow: 1;
-	height: 130px;
-	background-color: #040405;
+	height: 128px;
+	background-color: #00000000;
 	position: relative;
-	border: 1px solid #040405;
+	border: 30px solid #040405;
 	transition: 1s all ease;
 }
 
 #s-skills .grid-layout #skills #skills-cards article:hover {
-	border: 1px solid rgb(212, 64, 64);
+	border: 1px solid rgba(199, 29, 29, 0.568);
 }
 
 #s-skills .grid-layout #skills #skills-cards article:hover .skills-cards-name,#s-skills .grid-layout #skills #skills-cards article:hover .skills-cards-name-low,#s-skills .grid-layout #skills #skills-cards article:hover .skills-cards-name-high {
@@ -1935,7 +1929,7 @@ footer .grid-layout div img {
 	justify-content: center;
 	align-items: center;
 	display: none;
-	font-size: 1.8rem;
+	font-size: 3.2rem;
 }
 
 #s-skills .grid-layout #skills #skills-cards article .skills-cards-name-high {
@@ -1983,7 +1977,7 @@ footer .grid-layout #direitos-autorais {
 footer .grid-layout p {
 	color: #d8d8d8;
 	text-align: center;
-	font-size: 1.8rem;
+	font-size: 2.8rem;
 }
 
 footer .grid-layout div {
