--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ header .grid-layout nav .nav-list li a::after {
 	height: 1px;
 	bottom: -7px;
 	left: 0;
-	background: linear-gradient(270deg, #ff0000 0%, #000000 100%);
+	background: linear-gradient(270deg, #ffffff 0%, #000000 100%);
 	transform-origin: bottom right;
 	transition: transform .5s cubic-bezier(0.86, 0, 0.07, 1);
 }
@@ -211,18 +211,75 @@ header .grid-layout nav .nav-list li a:hover {
 	}
 }
 
+
+
+
+
 #s-home {
-    background-image: url("/assets/image/wallhaven-729gv3.png");
-	padding: 0px 50px;
-	position: relative;
-    background-color: #000000;
+    background-image: url("/assets/image/home-bg.png");
+    padding: 0px 50px;
+    position: relative;
+    background-color: #637bd0; /* Default background color */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 0px 50px;
-    position: relative;
     min-height: 100vh;
+    overflow: hidden; /* Ensures the effect doesn't overflow */
 }
+
+#s-home:hover {
+    animation: smoothColorChange 5s infinite;
+}
+
+#s-home:hover::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: inherit; /* Inherit the background image */
+    animation: waveGlitch 2s infinite linear;
+    opacity: 0.8; /* Adjust opacity for visibility */
+    pointer-events: none; /* Ensures the overlay doesn't block interactions */
+    z-index: 1;
+    mix-blend-mode: lighten; /* Keeps the background bright */
+}
+
+@keyframes smoothColorChange {
+    0% { background-color: #637bd0; }
+    25% { background-color: #b8b7b6; }
+    50% { background-color: #4caf50; }
+}
+
+@keyframes waveGlitch {
+    0% {
+        transform: scale(1) translate(0, 0);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+    25% {
+        transform: scale(1.02) translate(-2px, 2px); /* Slight scale and offset */
+        clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%); /* Wave distortion */
+    }
+    50% {
+        transform: scale(1) translate(0, 0);
+        clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 90%); /* Wave distortion */
+    }
+    75% {
+        transform: scale(1.02) translate(2px, -2px); /* Slight scale and offset */
+        clip-path: polygon(0 5%, 100% 0, 100% 95%, 0 100%); /* Wave distortion */
+    }
+    100% {
+        transform: scale(1) translate(0, 0);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+}
+
+
+
+
+
+
 
 @media screen and (max-width: 992px) {
 	#s-home {
@@ -289,7 +346,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-home .grid-layout #home #home-container-text a {
-	background: #3f94b0;
+	background: #000000;
 	color: rgb(0, 0, 0);
 	backdrop-filter: blur(10px);
 	padding: 10px 10px;
@@ -444,18 +501,17 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-about .grid-layout #about-text h2 span {
-	color: #00a1b2;
+	color: #00b212;
 }
 
 #s-about .grid-layout #about-text p {
 	line-height: 3.2rem;
 	color: #d8d8d8;
 	font-size: 2rem;
-	
 }
 
 #s-experience {
-	background-color: #040405;
+	background-color: #272742;
 	color: #fff;
 	padding: 96px 48px;
 }
@@ -638,7 +694,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-projects .grid-layout #projects>article:hover {
-	border: 1px solid #caeaf5;
+	border: 1px solid #272742;
 }
 
 @media screen and (max-width: 1200px) {
@@ -667,6 +723,11 @@ header .grid-layout nav .nav-list li a:hover {
 	font-size: 1.8rem;
 }
 
+#s-projects .grid-layout #projects>article span {
+	color: #b41e1e;
+	font-size: 2.8rem;
+}
+
 #s-projects .grid-layout #teslabank {
 	color: rgb(212, 64, 64);
 }
@@ -676,7 +737,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-projects .grid-layout #naped {
-	color: #00a1b2;
+	color: #e91818;
 }
 
 #s-projects .grid-layout #naped::after {
@@ -692,23 +753,10 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-projects .grid-layout a {
-	color: #50aab1;
+	color: #60b150;
 	position: relative;
 	font-size: 2rem;
 	font-weight: 400;
-}
-
-#s-projects .grid-layout a::after {
-	content: "";
-	position: absolute;
-	width: 100%;
-	transform: scaleX(0);
-	height: 1px;
-	bottom: -7px;
-	left: 0;
-	background: linear-gradient(270deg, #00a1b2 0%, #685ab8 100%);
-	transform-origin: bottom right;
-	transition: transform .5s cubic-bezier(0.86, 0, 0.07, 1);
 }
 
 #s-projects .grid-layout a:hover::after {
@@ -735,7 +783,7 @@ header .grid-layout nav .nav-list li a:hover {
 
 #s-services {
 	padding: 96px 48px;
-	background-color: #040405;
+	background-color: #000000;
 }
 
 @media screen and (max-width: 992px) {
@@ -801,7 +849,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 ::selection {
-	background-color: #282d2e;
+	background-color: #122232;
 	color: #fff;
 }
 
@@ -1238,7 +1286,6 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-experience {
-	background-color: #111111;
 	color: #fff;
 	padding: 96px 48px;
 }
@@ -1285,8 +1332,8 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-experience .grid-layout #experience .option-experience .activeExperience {
-	border-left: 4px solid #c30000;
-	color: rgb(212, 64, 64);
+	border-left: 4px solid #d22e2e;
+	color: #ce3838;
 }
 
 #s-experience .grid-layout #experience .option-experience>div {
@@ -1334,8 +1381,9 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-experience .grid-layout #experience .text-experience>div p {
-	font-size: 2.1rem;
-	color: rgb(212, 64, 64);
+	font-size: 1.5rem;
+	font-family: Rajdhani;
+	color: rgb(208, 208, 208);
 }
 
 #s-experience .grid-layout #experience .text-experience h5 {
@@ -1421,7 +1469,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-projects .grid-layout #projects>article:hover {
-	border: 1px solid #caeaf5;
+	border: 1px solid #637bd0;
 }
 
 @media screen and (max-width: 1200px) {
@@ -1459,7 +1507,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-projects .grid-layout #naped {
-	color: #00a1b2;
+	color: #00ff73;
 }
 
 #s-projects .grid-layout #naped::after {
@@ -1475,7 +1523,14 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-projects .grid-layout a {
-	color: #50aab1;
+	color: rgb(255, 255, 255);
+	position: relative;
+	font-size: 3rem;
+	font-weight: 00;
+}
+
+#s-projects .grid-layout a span {
+	color: rgb(212, 64, 64);
 	position: relative;
 	font-size: 3rem;
 	font-weight: 00;
@@ -1518,7 +1573,7 @@ header .grid-layout nav .nav-list li a:hover {
 
 #s-services {
 	padding: 96px 48px;
-	background-color: #040405;
+	background-color: #0e1010;
 }
 
 @media screen and (max-width: 992px) {
@@ -1545,9 +1600,12 @@ header .grid-layout nav .nav-list li a:hover {
 	flex-wrap: wrap;
 	margin: 24px 0px;
 }
+#s-services .grid-layout #services span {
+	color: #c62525;
+}
 
 #s-services .grid-layout #services article {
-	background-color: #030304;
+	background-color: #25253d;
 	height: auto;
 	padding: 32px;
 	margin: 8px;
@@ -1558,7 +1616,7 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-services .grid-layout #services article:hover {
-	border: 1px solid rgb(212, 64, 64);
+	border: 1px solid rgb(255, 55, 55);
 }
 
 @media screen and (max-width: 1200px) {
@@ -1649,6 +1707,10 @@ header .grid-layout nav .nav-list li a:hover {
 	line-height: 3.2rem;
 	color: #d8d8d8;
 	font-size: 2.8rem;
+}
+
+#s-skills .grid-layout #skills #skills-text span {
+	color: #cc2424;
 }
 
 #s-skills .grid-layout #skills #skills-cards {
@@ -1781,7 +1843,7 @@ footer .grid-layout div img {
 	margin-left: 8px;
 	opacity: 1;
 	animation: blink 1s infinite;
-	color: #00a1b2;
+	color: #000000;
 }
 
 @keyframes blink {
@@ -1977,7 +2039,8 @@ footer .grid-layout #direitos-autorais {
 footer .grid-layout p {
 	color: #d8d8d8;
 	text-align: center;
-	font-size: 2.8rem;
+	font-family: Rajdhani;
+	font-size: 1.9rem;
 }
 
 footer .grid-layout div {
