--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1919,12 +1919,14 @@ footer .grid-layout div img {
 	padding: 8px;
 }
 
-#s-skills .grid-layout #skills div,#s-skills .grid-layout #skills article {
+#s-skills .grid-layout #skills div,
+#s-skills .grid-layout #skills article {
 	width: 50%;
 }
 
 @media screen and (max-width: 1200px) {
-	#s-skills .grid-layout #skills div,#s-skills .grid-layout #skills article {
+	#s-skills .grid-layout #skills div,
+	#s-skills .grid-layout #skills article {
 		width: 100%;
 	}
 }
@@ -1968,27 +1970,39 @@ footer .grid-layout div img {
 }
 
 #s-skills .grid-layout #skills #skills-cards article {
+	position: relative;
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-wrap: wrap;
 	justify-content: center;
+	align-items: center;
 	width: 20%;
 	flex-grow: 1;
 	height: 128px;
-	background-color: #00000000;
-	position: relative;
-	border: 30px solid #040405;
-	transition: 1s all ease;
+	background-color: transparent;
+	border: 1px solid transparent; 
+	transition: border-color 0.3s ease; 
+}
+
+#s-skills .grid-layout #skills #skills-cards article::before {
+	content: '';
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%); 
+	width: 0;
+	height: 0;
+	background-color: rgba(212, 64, 64, 0.3); 
+	border-radius: 50%; 
+	transition: width 0.5s ease, height 0.5s ease; 
+	z-index: 0; 
+}
+
+#s-skills .grid-layout #skills #skills-cards article:hover::before {
+	width: 150px; 
+	height: 150px; 
 }
 
 #s-skills .grid-layout #skills #skills-cards article:hover {
-	border: 1px solid rgba(199, 29, 29, 0.568);
-}
-
-#s-skills .grid-layout #skills #skills-cards article:hover .skills-cards-name,#s-skills .grid-layout #skills #skills-cards article:hover .skills-cards-name-low,#s-skills .grid-layout #skills #skills-cards article:hover .skills-cards-name-high {
-	display: block;
-	text-align: center;
+	border-color: transparent; 
 }
 
 @media screen and (max-width: 768px) {
@@ -1996,22 +2010,6 @@ footer .grid-layout div img {
 		width: 40%;
 		margin: 20px 0px;
 	}
-}
-
-#s-skills .grid-layout #skills #skills-cards article .skills-cards-name,#s-skills .grid-layout #skills #skills-cards article .skills-cards-name-low,#s-skills .grid-layout #skills #skills-cards article .skills-cards-name-high {
-	left: 50%;
-	height: auto;
-	position: absolute;
-	padding: 5px;
-	transform: translate(-50%, 0%);
-	background-color: #000000;
-	width: 125px;
-	color: #fff;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	display: none;
-	font-size: 3.2rem;
 }
 
 #s-skills .grid-layout #skills #skills-cards article .skills-cards-name-high {
@@ -2028,6 +2026,8 @@ footer .grid-layout div img {
 
 #s-skills .grid-layout #skills #skills-cards article .skills-icons {
 	width: 60px;
+	z-index: 1; 
+	position: relative; 
 }
 
 footer {
