--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,14 +205,31 @@ header .grid-layout nav .nav-list li a:hover {
 }
 
 #s-home {
-	padding: 0px 50px;
-	position: relative;
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	min-height: 100vh;
-	overflow: hidden;
-	transition: background-image 2s ease-in-out;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+#s-home::before,
+#s-home::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: opacity 0.2s linear;
+}
+
+#s-home::before {
+  opacity: 1;
+  z-index: 1;
+}
+
+#s-home::after {
+  opacity: 0;
+  z-index: 2;
 }
 
 #s-home:hover {
