--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,43 +206,41 @@ header .grid-layout nav .nav-list li a:hover {
 
 #s-home {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  overflow: hidden;
   background-image: url("assets/image/octocat-1.png");
   background-size: contain;
+  background-position: center;
   background-repeat: no-repeat;
-  background-position: center center; 
-  background-color: #000;
+  overflow: hidden;
 }
 
-#s-home:hover {
-    animation: smoothColorChange 10s infinite;
+#s-home::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+  background: radial-gradient(
+    circle at var(--x, 50%) var(--y, 50%),
+    rgba(255, 255, 255, 0) 10px,     /* bright center */
+    rgba(0, 0, 0, 0.99) 300px         /* dark edges */
+  );
+  transition: background 0.1s ease-out;
+  z-index: 2;
 }
 
-#s-home:hover::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: inherit; 
-    animation: heartbeat 1.2s infinite linear;
-    opacity: 0.8;
-    pointer-events: none; 
-    z-index: 1;
-    mix-blend-mode: lighten; 
+/* #s-home:hover {
+    animation: smoothColorChange 35s infinite;
 }
 
 @keyframes smoothColorChange {
     0% { background-color: a2d2ff; }
-    25% { background-color: #bde0fe; }
-    50% { background-color: #afffcf; }
-	75% { background-color: #d5c8ff; }
-	85% { background-color: #65ccb8; }
-	100% { background-color: #a2d2ff; }
-}
+    25% { background-color: rgba(55, 151, 234, 0); }
+    50% { background-color: #afffcf00; }
+	75% { background-color: #d5c8ff00; }
+	85% { background-color: #65ccb700; }
+	100% { background-color: #a2d2ff00; }
+} */
 
 @keyframes heartbeat {
     0% {
